# Customer-Support-Assistant

./: .dockerignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  main.cpp
Controller/: BankController.cpp  BankController.h
Domain/: AIModel.cpp  AIModel.h  Agent.cpp  Agent.h  Bank.cpp  Bank.h  Departament.cpp  Departament.h  Department.cpp  Department.h  Inquiry.cpp  Inquiry.h  InquiryStatus.h  UrgencyLevel.h  User.cpp  User.h
Gui/: ClientView.cpp  ClientView.h  ClientView.ui  ConfigurationView.cpp  ConfigurationView.h  ConfigurationView.ui  ControllerView.cpp  ControllerView.h  ControllerView.ui  DepartmentView.cpp  DepartmentView.h  DepartmentView.ui  InquiriesView.cpp  InquiriesView.h  InquiriesView.ui  StatisticsView.cpp  StatisticsView.h  StatisticsView.ui
Repository/: BankRepository.cpp  BankRepository.h
Utils/: CustomTables.cpp  CustomTables.h  ObserverPattern.h  time.h
